--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1602,7 +1602,7 @@ LeadScreen As screen:
                     LeadInformationLID:LookUp(LeadInformations,ID=glryleadlistLS.Selected.ID),
                     IsQQApp:true
                 });
-                TechnicianMessage.Run(glryleadlistLS.Selected.Email,User().FullName,glryleadlistLS.Selected.'BuildingName ');
+                TechnicianMessage.Run(glryleadlistLS.Selected.Email,User().FullName,glryleadlistLS.Selected.LeadTrackingNumber);
                 If(
                         (!IsEmpty(Errors(LeadChats))),
                         Notify(
