--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -1778,3 +1778,85 @@ LeadScreen As screen:
             Y: =lblmsgLS_1.Y+ lblmsgLS_1.Height+10
             ZIndex: =19
 
+    grpEstimateNumberSuccessLdS As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =26
+
+        rectfullinprogressconfirmtionLS_3 As rectangle:
+            Fill: =RGBA(0, 0, 0, 0.29)
+            Height: =Parent.Height
+            Visible: =VarPopUpInprogress
+            Width: =Parent.Width
+            ZIndex: =20
+
+        rectinprogressconfirmationLS_3 As rectangle:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =280
+            Visible: =VarPopUpInprogress
+            Width: =400
+            X: =(Parent.Width-Self.Width)/2
+            Y: =Parent.Height/3
+            ZIndex: =21
+
+        imginfoLS_3 As image:
+            Height: =52
+            Image: =images
+            Visible: =VarPopUpInprogress
+            Width: =52
+            X: =(Parent.Width-Self.Width)/2
+            Y: =rectinprogressconfirmationLS_3.Y+20
+            ZIndex: =22
+
+        lblmsgLS_3 As label:
+            Align: =Align.Center
+            Font: =Font.Arial
+            FontWeight: =FontWeight.Bold
+            Height: =100
+            Size: =15
+            Text: ="Do you want to work on this lead ?"
+            Visible: =VarPopUpInprogress
+            Width: =350
+            X: =(Parent.Width-Self.Width)/2
+            Y: =imginfoLS_3.Y+ imginfoLS_3.Height+2
+            ZIndex: =23
+
+        btnyesLS_3 As button:
+            Fill: =RGBA(54, 176, 75, 1)
+            Font: =Font.Arial
+            HoverFill: =RGBA(75, 125, 6, 1)
+            OnSelect: |-
+                =Set(QQname,true);
+                UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:VarLoggedInUser.FullName,StatusDate:Now()});
+                LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
+                Navigate(LeadScreen);
+            PressedBorderColor: =RGBA(1, 43, 1, 0)
+            PressedFill: =Self.Fill
+            Text: ="Yes"
+            Visible: =VarPopUpInprogress
+            Width: =120
+            X: =(Parent.Width-Self.Width)/2.3
+            Y: =lblmsgLS_3.Y+ lblmsgLS_3.Height+10
+            ZIndex: =24
+
+        btnnoLS_3 As button:
+            BorderColor: =RGBA(75, 125, 6, 1)
+            Fill: =RGBA(54, 176, 75, 1)
+            Font: =Font.Arial
+            HoverBorderColor: =RGBA(75, 125, 6, 1)
+            HoverFill: =RGBA(75, 125, 6, 1)
+            OnSelect: |-
+                =Set(QQname,false);
+                Navigate(LeadScreen);
+                //Set(VarPopUpInprogress,false);
+            PressedBorderColor: =RGBA(1, 43, 1, 0)
+            PressedFill: =Self.Fill
+            Text: ="No"
+            Visible: =VarPopUpInprogress
+            Width: =120
+            X: =btnyesLS_3.X+btnyesLS_3.Width+20
+            Y: =lblmsgLS_3.Y+ lblmsgLS_3.Height+10
+            ZIndex: =25
+
