--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -5,6 +5,7 @@ LeadScreen As screen:
         Set(VarLeadProposal,false);
         Set(VarLeadMessages,false);
         Set(VarPopUpEstimateNumber,false);
+        Set(VarPopUpEstimateNumberSubmitted,false);
         Refresh(LeadInformations);
         Refresh(LeadImages);
         Refresh(LeadChats);
@@ -1310,7 +1311,9 @@ LeadScreen As screen:
                                     )
                                 ),
                                // Notify("Estimate number not found in the FP Estimate file or Wrong Estimate number for this lead Technician is entered.");
-                               Notify("Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
+                              // Notify("Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
+                               Set(VarPopUpEstimateNumberSubmitted,true);
+                               Set(VarPopUpEstimateNumberSubmittedmsg,"Estimate number of this lead technician is not found in FP Estimate file, Estimate number saved successfully.We will update Incentives Details when FPEstimate file is processed");
                                 Set(
                                     FlagEstimateNumberFound,
                                     false
@@ -1353,10 +1356,12 @@ LeadScreen As screen:
                                 }
                             );
                             
-                            Notify(
+                           /* Notify(
                                 "Proposed Incentives updated for the estimateId " & txtinptestimatenumber_1.Text,
                                 NotificationType.Success
-                            );
+                            );*/
+                             Set(VarPopUpEstimateNumberSubmitted,true);
+                             Set(VarPopUpEstimateNumberSubmittedmsg,"Proposed Incentives updated for the estimateId " & txtinptestimatenumber_1.Text);
                             Navigate(DashboardScreen);,
                             //If Estimate number is not found in FP Estimate file then we are storing estimate nummber only.
                          UpdateIf(
@@ -1788,24 +1793,25 @@ LeadScreen As screen:
         rectfullinprogressconfirmtionLS_3 As rectangle:
             Fill: =RGBA(0, 0, 0, 0.29)
             Height: =Parent.Height
-            Visible: =VarPopUpInprogress
+            Visible: =VarPopUpEstimateNumberSubmitted
             Width: =Parent.Width
             ZIndex: =20
 
         rectinprogressconfirmationLS_3 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
             Height: =280
-            Visible: =VarPopUpInprogress
+            Visible: =VarPopUpEstimateNumberSubmitted
             Width: =400
             X: =(Parent.Width-Self.Width)/2
             Y: =Parent.Height/3
             ZIndex: =21
 
         imginfoLS_3 As image:
-            Height: =52
-            Image: =images
-            Visible: =VarPopUpInprogress
-            Width: =52
+            Height: =60
+            Image: =Success
+            ImagePosition: =ImagePosition.Fill
+            Visible: =VarPopUpEstimateNumberSubmitted
+            Width: =70
             X: =(Parent.Width-Self.Width)/2
             Y: =rectinprogressconfirmationLS_3.Y+20
             ZIndex: =22
@@ -1813,11 +1819,11 @@ LeadScreen As screen:
         lblmsgLS_3 As label:
             Align: =Align.Center
             Font: =Font.Arial
-            FontWeight: =FontWeight.Bold
-            Height: =100
-            Size: =15
-            Text: ="Do you want to work on this lead ?"
-            Visible: =VarPopUpInprogress
+            FontWeight: =FontWeight.Semibold
+            Height: =140
+            Text: =VarPopUpEstimateNumberSubmittedmsg
+            VerticalAlign: =VerticalAlign.Top
+            Visible: =VarPopUpEstimateNumberSubmitted
             Width: =350
             X: =(Parent.Width-Self.Width)/2
             Y: =imginfoLS_3.Y+ imginfoLS_3.Height+2
@@ -1827,18 +1833,14 @@ LeadScreen As screen:
             Fill: =RGBA(54, 176, 75, 1)
             Font: =Font.Arial
             HoverFill: =RGBA(75, 125, 6, 1)
-            OnSelect: |-
-                =Set(QQname,true);
-                UpdateIf(LeadInformations,ID=glryleadlistLS.Selected.ID,{LeadStatus:"InProgress",QQTeamName:VarLoggedInUser.FullName,StatusDate:Now()});
-                LeadInProgress.Run(glryleadlistLS.Selected.Email,glryleadlistLS.Selected.LeadTrackingNumber,VarLoggedInUser.FullName);
-                Navigate(LeadScreen);
+            OnSelect: =Set(VarPopUpEstimateNumberSubmitted,false);
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
-            Text: ="Yes"
-            Visible: =VarPopUpInprogress
+            Text: ="Ok"
+            Visible: =VarPopUpEstimateNumberSubmitted
             Width: =120
-            X: =(Parent.Width-Self.Width)/2.3
-            Y: =lblmsgLS_3.Y+ lblmsgLS_3.Height+10
+            X: =621
+            Y: =lblmsgLS_3.Height+lblmsgLS_3.Y
             ZIndex: =24
 
         btnnoLS_3 As button:
@@ -1854,7 +1856,7 @@ LeadScreen As screen:
             PressedBorderColor: =RGBA(1, 43, 1, 0)
             PressedFill: =Self.Fill
             Text: ="No"
-            Visible: =VarPopUpInprogress
+            Visible: =//VarPopUpEstimateNumberSubmitted
             Width: =120
             X: =btnyesLS_3.X+btnyesLS_3.Width+20
             Y: =lblmsgLS_3.Y+ lblmsgLS_3.Height+10
